--- a/page2/page2.html
+++ b/page2/page2.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Page2Journal</title>
-    <link href="/Grid/page2/page2.css" rel="stylesheet"/><link rel="preconnect" href="https://fonts.googleapis.com">
+    <link href="/Grid/grid/page2/page2.css" rel="stylesheet"/><link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@700&family=Source+Sans+3:wght@400;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet"
@@ -36,7 +36,7 @@
                     of my Solo Projects projects and meet like-minded peers.</p>
             </div>
         </div>
-        <img class="promo-img" src="/Grid/images/comp.png" width="100%" alt="comp"/>
+        <img class="promo-img" src="/Grid/grid/images/comp.png" width="100%" alt="comp"/>
         <div class="main-text container">
                 <p class="bold">How I stay committed to learning</p>
 
@@ -65,7 +65,7 @@
 
                 <!-- card 1-->
                 <div class="grid-card post1">
-                    <img src="/Grid/images/card1.png" alt="Card 1">
+                    <img src="/Grid/grid/images/card1.png" alt="Card 1">
                     <p>JULY 23, 2022</p>
                     <p class="bold">Blog one</p>
                     <p>I'm excited to start a new learning journey as a Scrimba Bootcamp student! 
@@ -74,7 +74,7 @@
 
                 <!-- card 2-->
                 <div class="grid-card post2">
-                    <img src="/Grid/images/card2.png" alt="Card 2">
+                    <img src="/Grid/grid/images/card2.png" alt="Card 2">
                     <p>JULY 23, 2022</p>
                     <p class="bold">Blog two</p>
                     <p>I'm excited to start a new learning journey as a Scrimba Bootcamp student! 
@@ -83,7 +83,7 @@
 
                 <!-- card 3-->
                 <div class="grid-card post3">
-                    <img src="/Grid/images/card3.png" alt="Card 3">
+                    <img src="/Grid/grid/images/card3.png" alt="Card 3">
                     <p>JULY 23, 2022</p>
                     <p class="bold">Blog three</p>
                     <p>I'm excited to start a new learning journey as a Scrimba Bootcamp student! 
