--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link href="/grid/page1/index.css" rel="stylesheet">
+        <link href="/grid/index.css" rel="stylesheet">
         <link rel="stylesheet"
         href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
         integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
@@ -39,7 +39,7 @@
                 
                 <!-- card 1-->
                 <div class="grid-card">
-                    <img src="/grid/images/card1.png" alt="Card 1">
+                    <img src="/images/card1.png" alt="Card 1">
                     <p>JULY 23, 2022</p>
                     <p class="bold">Blog one</p>
                     <p>I'm excited to start a new learning journey as a Scrimba Bootcamp student! 
@@ -48,7 +48,7 @@
 
                 <!-- card 2-->
                 <div class="grid-card">
-                    <img src="/grid/images/card2.png" alt="Card 2">
+                    <img src="/images/card2.png" alt="Card 2">
                     <p>JULY 23, 2022</p>
                     <p class="bold">Blog two</p>
                     <p>I'm excited to start a new learning journey as a Scrimba Bootcamp student! 
@@ -57,7 +57,7 @@
 
                 <!-- card 3-->
                 <div class="grid-card">
-                    <img src="/grid/images/card3.png" alt="Card 3">
+                    <img src="/images/card3.png" alt="Card 3">
                     <p>JULY 23, 2022</p>
                     <p class="bold">Blog three</p>
                     <p>I'm excited to start a new learning journey as a Scrimba Bootcamp student! 
@@ -66,7 +66,7 @@
 
                 <!-- card 4-->
                 <div class="grid-card">
-                    <img src="/grid/images/card4.png" alt="Card 4">
+                    <img src="/images/card4.png" alt="Card 4">
                     <p>JULY 23, 2022</p>
                     <p class="bold">Blog four</p>
                     <p>I'm excited to start a new learning journey as a Scrimba Bootcamp student! 
@@ -75,7 +75,7 @@
 
                 <!-- card 5-->
                 <div class="grid-card">
-                    <img src="/grid/images/card5.png" alt="Card 5">
+                    <img src="/images/card5.png" alt="Card 5">
                     <p>JULY 23, 2022</p>
                     <p class="bold">Blog five</p>
                     <p>I'm excited to start a new learning journey as a Scrimba Bootcamp student! 
@@ -84,7 +84,7 @@
 
                 <!-- card 6-->
                 <div class="grid-card">
-                    <img src="/grid/images/card6.png" alt="Card 6">
+                    <img src="/images/card6.png" alt="Card 6">
                     <p>JULY 23, 2022</p>
                     <p class="bold">Blog six</p>
                     <p>I'm excited to start a new learning journey as a Scrimba Bootcamp student! 
